@@ -1,5 +1,15 @@
 2008-02-10  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-menu-items.c: (panel_menu_items_append_from_desktop): fix
+	compilation
+	(panel_place_menu_item_drives_changed): new
+	(panel_place_menu_item_volumes_changed): new
+	(panel_place_menu_item_finalize): disconnect new signal handlers
+	(panel_place_menu_item_init): connect to the drive-* and volume-*
+	signals too
+
+2008-02-10  Vincent Untz  <vuntz@gnome.org>
+
 	Once upon a time, someone created gio. And those words were told:
 	"thou shall port your application to gio".
 	And people worked hard towards this goal.
